--- a/code/www/js/directives/messages/modals/open_message_modal_connection_request.html
+++ b/code/www/js/directives/messages/modals/open_message_modal_connection_request.html
@@ -1,5 +1,5 @@
 
-<div class="modal openMessageModal" id="openMessageModal" ng-controller="openMessageModalController as vm">
+<div class="modal openMessageModal" id="openMessageModalConnectionRequest" ng-controller="openMessageModalController as vm">
   <div style="background: transparent;">
     <div class="bar bar-header" id="openMessageModalHeader">
       <div class="h1 title">{{vm.messageTypeDisplay}}</div>
