messages look abit better and friends connection wizard matches app scheme(orange red)

--- a/code/www/js/directives/messages/modals/open_message_modal_connection_request.html
+++ b/code/www/js/directives/messages/modals/open_message_modal_connection_request.html
@@ -9,7 +9,7 @@
       <div id="ConnectionRequestOpenText">
         <p>
           <canvas id='OpenMessageModalConnectionRequestAvatarImage' height=80 width=80>
-          </canvas>{{vm.params[0].message.sender_name}} wants to add you as a friend<br>
+          </canvas><p>{{vm.params[0].message.sender_name}} wants to add you as a friend</p><br>
         </p>
       </div>
 
