--- a/code/www/js/directives/messages/modals/open_message_modal_connection_response.html
+++ b/code/www/js/directives/messages/modals/open_message_modal_connection_response.html
@@ -9,7 +9,7 @@
       <div>
         <p>
           <canvas id='OpenMessageModalConnectionResponseAvatarImage' height=80 width=80>
-          </canvas>{{vm.params[0].message.sender_name}} has accepted your connection request<br> you are now friends<br>
+          </canvas><p>{{vm.params[0].message.sender_name}} has accepted your connection request. You are now friends</p><br>
         </p>
       </div>
 
