--- a/code/www/js/directives/friends/friends.directive.html
+++ b/code/www/js/directives/friends/friends.directive.html
@@ -17,12 +17,24 @@
 
 
         <ion-modal-controller></ion-modal-controller>
-        <div class="item item-button-right friendsSearch">
+        <div class="item item-button-right playlistsSearch">
+          <form ng-submit="vm.search(vm.searchText)" >
+            <input placeholder="search&hellip;" type="text" ng-value="searchInput" name="searchTextInput" id="searchBox"
+             ng-model="vm.searchText">
+          </form>
+          <div ng-hide=!vm.searching class="browseSpinner">
+            <ion-spinner class="" paused="true" name="circles"></ion-spinner>
+          </div>
+          <button class="button button-stable search" ng-click="vm.search(vm.searchText)" id="searchButton">
+            <i style="color:black;" class="icon ion-search"></i>
+          </button>
+        </div>
+        <!-- <div class="item item-button-right friendsSearch">
           <input type="text" ng-value="searchInput" name="searchTextInput" id="searchBox" ng-model="searchText">
           <button class="button button-assertive search" ng-click="vm.search()" id="searchButton">
             <i class="icon ion-search"></i>
           </button>
-        </div>
+        </div> -->
       </div>
       <ion-content id="friendsListscroll">
         <ion-list can-swipe="true" id="friendsList">
