added share wizard

--- a/code/www/index.html
+++ b/code/www/index.html
@@ -214,6 +214,9 @@
 
 
   <!-- END MUSIC PROVIDER -->
+  <!-- SEND SERVICE -->
+  <script src="js/services/send/SendService.js"></script>
+  <!-- END OF SEND SERVICE -->
 
   <!--SHORTCUTBAR-->
   <script src="js/directives/shortcutBar/shortcutBar.directive.js"></script>
@@ -238,6 +241,9 @@
 
   <script src="js/services/playlist/playlist.module.js"></script>
   <script src="js/services/playlist/playlist.service.js"></script>
+
+  <script src="js/wizards/gaddum.share.wizard/share.modal.js"></script>
+  <script src="js/wizards/gaddum.share.wizard/share.modal.controller.js"></script>
 
   <script src="js/wizards/gaddum.importPlaylist.wizard/importPlaylist.modal.js"></script>
   <script src="js/wizards/gaddum.importPlaylist.wizard/importPlaylist.modal.controller.js"></script>
@@ -323,6 +329,8 @@
   <script src="js/services/models/MoodIdentifier.js"></script>
   <script src="js/services/models/MusicProviderIdentifier.js"></script>
   <script src="js/services/models/Observation.js"></script>
+  <script src="js/services/models/Payload.js"></script>
+  <script src="js/services/models/PushMessage.js"></script>
   <script src="js/services/models/PlaylistIdentifier.js"></script>
   <script src="js/services/models/Postcode.js"></script>
   <script src="js/services/models/RawObservation.js"></script>
