quick fix to issue#32 profileEdit wont open twice now

--- a/code/www/index.html
+++ b/code/www/index.html
@@ -395,7 +395,7 @@
   <div  class="bar bar-header" align-title="center">
     <spinner_directive></spinner_directive>
     <h1 class="title">
-      gaddum
+      Gaddum
     </h1>
     <main_menu_directive class="main_menuButton"></main_menu_directive>
   </div>
