integrated Spotify and Spotify Connect music providers

--- a/code/www/index.html
+++ b/code/www/index.html
@@ -200,6 +200,7 @@
   <script src="js/services/streaming/gaddum.streaming.module.js"></script>
   <script src="js/services/streaming/gaddum.musicProvider.service.js"></script>
   <script src="js/services/musicProviders/spotify/main/gaddum.musicProvider.Spotify.service.js"></script>
+  <script src="js/services/musicProviders/spotifyConnect/main/gaddum.musicProvider.SpotifyConnect.service.js"></script>
   <script src="js/services/musicProviders/spotify/authenticate/authenticate.service.js"></script>
   <script src="js/services/musicProviders/spotify/authenticate/credentials.service.js"></script>
 
